MOSTECHOS-61: Code Formatting Added